changed landing page text

--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
         <h1 class="text-uppercase mb-0">Josef Doornink</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">I am an experienced software developer on the never ending path to code enlightenment. 
-          Learning is a passion of mine and I am constantly looking for new avenues to explore.
-          If you have an idea, let me know and lets see what we can come up with together.
-          </h2>
+          Learning is a passion of mine and I am constantly looking for new avenues to explore.<br/>
+          Learn more about me by viewing my portfolio below or visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page.</h2>
       </div>
     </header>
 
