updated patents image

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/patents.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/patents-awards.jpg" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
