--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">I am an experienced software developer on the never ending path to code enlightenment. 
           Learning is a passion of mine and I am constantly looking for new avenues to explore.<br/>
-          Learn more about me by viewing my portfolio below or visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page.</h2>
+          Learn more about me by viewing my portfolio below or visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page.
+        </h2>
       </div>
     </header>
 
@@ -164,20 +165,23 @@
     <section class="bg-primary mb-0" id="about">
       <div class="container">
         <h2 class="text-center text-uppercase ">About</h2>
-        <hr class="star-light mb-5">
-        <div class="row">
+        <hr class="star-light mb-5"></hr>
+        <div class="mr-auto centerAlign">I am an experienced software developer on the never ending path to code enlightenment. <br/>
+          Learning is a passion of mine and I am constantly looking for new adventures to explore.<br/>
+          Learn more about me by viewing my portfolio, visiting my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page, or emailling me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
+        </div>
+        <!-- <div class="row">
           <div class="col-lg-4 ml-auto text">
-            <p class="lead justifyAlign">Over 4 years of proven applied enterprise level software experience in using multiple technologies for consumer and business based experiences.
+            <p class="lead leftAlign">Over 4 years of proven applied enterprise level software experience in using multiple technologies for consumer and business based experiences.
                 Increased levels of responsibility and ownership in teams, project and strategies.
-                
-                </p>
+            </p>
           </div>
           <div class="col-lg-4 mr-auto justifyAlign">
             <p style="font-size:1.25rem">Broad knowledge base and team player with experience developing in multiple time-sensitive environments.
               Enthusiastic team lead in some instances and energetic support developer in others.
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -275,12 +279,6 @@
         </div>
       </div>
     </footer>
-
-    <div class="copyright py-4 text-center text-white">
-      <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
-      </div>
-    </div>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-to-top d-lg-none position-fixed ">
