--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/Bridge-Small-Brighter.jpg" alt="">
         <h1 class="text-uppercase mb-0">Josef Doornink</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">I am an experienced software developer on the never ending path to code enlightenment. 
+        <h2 class="font-weight-light mb-0">I am an experienced software developer with nearly 5 years of development experience with enterprise application software.<br/>
           Learning is a passion of mine and I am constantly looking for new avenues to explore.<br/>
-          Learn more about me by viewing my portfolio below or visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page.
+          Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
         </h2>
       </div>
     </header>
@@ -134,7 +134,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/patents-awards.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/patentsandawards.jpg" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -166,9 +166,9 @@
       <div class="container">
         <h2 class="text-center text-uppercase ">About</h2>
         <hr class="star-light mb-5"></hr>
-        <div class="mr-auto centerAlign">I am an experienced software developer on the never ending path to code enlightenment. <br/>
-          Learning is a passion of mine and I am constantly looking for new adventures to explore.<br/>
-          Learn more about me by viewing my portfolio, visiting my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page, or emailling me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
+        <div class="mr-auto centerAlign">I am an experienced software developer with nearly 5 years of development experience with enterprise application software.<br/>
+          My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
+          Learn more about me by viewing my portfolio below or visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
         </div>
         <!-- <div class="row">
           <div class="col-lg-4 ml-auto text">
