--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Curiculum Vitae</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Curriculum Vitae</h2>
               <hr class="star-dark mb-5">
               <p class="mb-5"></p>
               <div id="resumeContent"></div>
