Minor Changes to Cerification Section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/links.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/Certifications.jpg" alt="">
             </a>
           </div>
         </div>
@@ -414,7 +414,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Under Construction</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/links.jpg" alt="">
+              <img class="img-fluid mb-5" src="img/portfolio/Certificates1.jpg" alt="">
               <p class="mb-5">Coming Soon</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
