--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         $("#workExperienceContent").load("WorkExperience/WorkExperience.html"); 
       });
 
+      $(function(){
+        $("#certificationsContent").load("Certifications/Certifications.html"); 
+      });
+
       </script> 
 
       
@@ -412,10 +416,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Under Construction</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Certifications</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/Certificates1.jpg" alt="">
-              <p class="mb-5">Coming Soon</p>
+              <div class="justifyAlign" id="certificationsContent"></div>
+              <br>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
