--- a/index.html
+++ b/index.html
@@ -71,12 +71,6 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -88,8 +82,8 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/Bridge-Small-Brighter.jpg" alt="">
         <h1 class="text-uppercase mb-0">Josef Doornink</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0" style="font-size:1.25rem">I am an enthusiastic software developer with nearly 5 years of development experience with enterprise application software.<br/><br/>
-          Learning is a passion of mine and I am constantly looking for new avenues to explore.<br/><br/>
+        <h2 class="font-weight-light mb-0" style="font-size:1.25rem">Enthusiastic software engineer with over 6 years of development experience with enterprise application software.<br/>
+          My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
           Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
         </h2>
       </div>
@@ -165,78 +159,6 @@
       </div>
     </section>
 
-    <!-- About Section -->
-    <section class="bg-primary mb-0" id="about">
-      <div class="container">
-        <h2 class="text-center text-uppercase ">About</h2>
-        <hr class="star-light mb-5"></hr>
-        <div class="mr-auto centerAlign" style="font-size:1.25rem">I am an enthusiastic software developer with nearly 5 years of development experience with enterprise application software.<br/>
-          My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
-          Learn more about me by viewing my portfolio below or visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
-        </div>
-        <!-- <div class="row">
-          <div class="col-lg-4 ml-auto text">
-            <p class="lead leftAlign">Over 4 years of proven applied enterprise level software experience in using multiple technologies for consumer and business based experiences.
-                Increased levels of responsibility and ownership in teams, project and strategies.
-            </p>
-          </div>
-          <div class="col-lg-4 mr-auto justifyAlign">
-            <p style="font-size:1.25rem">Broad knowledge base and team player with experience developing in multiple time-sensitive environments.
-              Enthusiastic team lead in some instances and energetic support developer in others.
-            </p>
-          </div>
-        </div> -->
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -277,8 +199,8 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Josef Doornink</h4>
-            <p class="lead mb-0">Josef Doornink is an experienced software developer with Microsoft Stack technologies and others.</p>
+            <h4 class="text-uppercase mb-4">Contact Info</h4>
+            <p class="lead mb-0"><a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a></p>
           </div>
         </div>
       </div>
