added Viewpont Experience and modified index.html where appropriate

--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
             </li>
           </ul>
         </div>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-0 mx-lg-1">
+              <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
