--- a/WorkExperience/WorkExperience.html
+++ b/WorkExperience/WorkExperience.html
@@ -1,7 +1,40 @@
 <table >
+    <thead>
+    <tr>
+    <th style="text-align:left"><strong>04.2018 – CURRENT</strong></th>
+    <th class="centerTop"><strong>Viewpoint Construction Software</strong></th>
+    <th style="text-align:right">Portland, OR</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    <td class="leftTop"><strong>Title:</strong></td>
+    <td class="centerTop"><strong>Software Developer II</strong></td>
+    </tr>
+    <tr>
+    <td class="leftTop"><strong>Teams:</strong></td>
+    <td style="text-align:center"><p class="justifyAlign"> HRIM, DEVOPS, DASHBOARD MANAGEMENT</p></td>
+    </tr>
+    <tr>
+    <td class="leftTop"><strong>Summary:</strong></td>
+    <td class="centerTop"><p class="justifyAlign"> DevOps Engineer responsible for the architecture, development, and maintenance of CI/CD pipelines for multiple API based SaaS microservices. </p></td>
+    </tr>
+    <tr>
+    <td class="leftTop"><strong>Involvement:</strong></td>
+    <td><p class="justifyAlign"> Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.<br/><br/>
+        Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.<br/><br/>
+        Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.<br/><br/>
+        Implemented monitoring solutions for both service and infrastructure as well as adding improvements to our internal tooling for improved software performance and delivery.<br/><br/>
+        Worked with teams of product managers, developers and architects to document and understand existing functionality of an on-premise software solution for future Cloud transfer.<br/><br/>
+        Front-End engineer tasked with creating Angular UI integration with .NET APIs for transfer of on-premise software solution to the Cloud.
+    </p></td>
+    </tr>
+    </tbody>
+    </table>
+<table >
 <thead>
 <tr>
-<th style="text-align:left"><strong>04.2014 – CURRENT</strong></th>
+<th style="text-align:left"><strong>04.2014 – 04.2018</strong></th>
 <th class="centerTop"><strong>OnFulfillment™</strong></th>
 <th style="text-align:right">Portland, OR</th>
 </tr>
