minor text change

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </a> -->
         <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume2.pdf">
           <i class="fa"></i>
-          PDF </a>
+          PDF (Single Page) </a>
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -283,7 +283,7 @@
             </p>
             <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume2.pdf">
               <i class="fa"></i>
-              PDF </a>
+              PDF (Single Page) </a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
