index page clearnup

--- a/Skills/Skills.html
+++ b/Skills/Skills.html
@@ -1,6 +1,6 @@
 <p><strong>Programming</strong></p>
-<p>Kubernetes, Helm, C#, Azure, .NET Core, Docker, F#, CSS, HTML, .NET Framework, T-SQL, JavaScript, TypeScript, jQuery, Swagger, GIT, YAML, Azure DevOps</p>
+<p>Kubernetes, Helm, C#, Azure Portal, .NET Core, Docker, F#, CSS, HTML, .NET Framework, T-SQL, CosmosDB, JavaScript, TypeScript, jQuery, Swagger, GIT, YAML, Azure DevOps</p>
 <p><strong>Programs</strong></p>
 <p>Visual Studio, VSCode, XCode, Xamarin, Photoshop, Office, G Suite</p>
 <p><strong>Tools</strong></p>
-<p>Agile Methodology, Scrum Methodology, Kubectl, GitHub, GitHub Actions, Azure DevOps, Bash, PowerShell, Web Forms, Fiddler, MVVC, MVC, Authorize.NET, Chocolatey, VIM, WordPress, LeanKit, node.js; NPM; Angular; LabView; Evernote; Slack; Bootstrap; Pluralsight; Katana, Object Oriented programming, IAAS, SAAS, Fluent Bit</p>
+<p>Agile Methodology, Scrum Methodology, Kubectl, GitHub, GitHub Actions, Azure DevOps, Bash, SQL Server, PowerShell, Web Forms, Fiddler, MVVC, MVC, Authorize.NET, Chocolatey, VIM, WordPress, LeanKit, node.js; NPM; Angular; Firebase, LabView; Evernote; Slack; Bootstrap; Pluralsight; Katana, Object Oriented programming, IAAS, SAAS, New Relic, Ingress, Fluent Bit</p>
