minor updates to work-experience page

--- a/WorkExperience/WorkExperience.html
+++ b/WorkExperience/WorkExperience.html
@@ -2,18 +2,18 @@
     <thead>
     <tr>
     <th style="text-align:left"><strong>04.2018 – CURRENT</strong></th>
-    <th class="centerTop"><strong>Viewpoint Construction Software</strong></th>
+    <th class="centerTop"><strong>VIEWPOINT CONSTRUCTION SOFTWARE</strong></th>
     <th style="text-align:right">Portland, OR</th>
     </tr>
     </thead>
     <tbody>
     <tr>
     <td class="leftTop"><strong>Title:</strong></td>
-    <td class="centerTop"><strong>Software Developer II</strong></td>
+    <td style="text-align:left"><strong>SOFTWARE DEVELOPER II (DEVOPS)</strong></td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Teams:</strong></td>
-    <td style="text-align:center"><p class="justifyAlign">HRIM, DEVOPS, DASHBOARD MANAGEMENT</p></td>
+    <td style="text-align:left"><p class="justifyAlign">HRIM<br> DevOps<br> Dashboard Management</p></td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Summary:</strong></td>
@@ -35,14 +35,14 @@
 <thead>
 <tr>
 <th style="text-align:left"><strong>04.2014 – 04.2018</strong></th>
-<th class="centerTop"><strong>OnFulfillment™</strong></th>
+<th class="centerTop"><strong>ONFULFILLMENT™</strong></th>
 <th style="text-align:right">Portland, OR</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="leftTop"><strong>Title:</strong></td>
-<td class="centerTop"><strong>Software Developer</strong></td>
+<td style="text-align:left"><strong>SOFTWARE DEVELOPER</strong></td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Teams:</strong></td>
@@ -85,11 +85,11 @@
 </tr>
 <tr>
 <td class="leftTop"><strong>Title:</strong></td>
-<td class="centerTop"><strong>Junior Developer</strong></td>
+<td style="text-align:left"><strong>JUNIOR DEVELOPER</strong></td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Teams:</strong></td>
-<td class="centerTop"><p class="justifyAlign">Action – Mentor: John Kiser, Chief Technology Officer </p></td>
+<td class="centerTop"><p class="justifyAlign">Action – John Kiser, Chief Technology Officer </p></td>
 </tr>
 <tr>
 <td style="text-align:left"></td>
@@ -112,21 +112,16 @@
 </table>
 <table>
 <thead>
-<tr>
-<th style="text-align:left"></th>
-<th style="text-align:center"></th>
-<th style="text-align:right"></th>
-</tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:left"><strong>02.2007 – 01.2013</strong></td>
-<td class="centerTop"><strong>Legacy Biomechanics Research Lab</strong></td>
+<td class="centerTop"><strong>LEGACY BIOMECHANICS RESEARCH LAB</strong></td>
 <td style="text-align:right">Portland, OR</td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Title:</strong></td>
-<td class="centerTop"><strong>Biomechanical Research Engineer II</strong></td>
+<td style="text-align:left"><strong>BIOMECHANICAL RESEARCH ENGINEER II</strong></td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Teams:</strong></td>
@@ -163,12 +158,12 @@
 <tbody>
 <tr>
 <td style="text-align:left"><strong>06.2008 – 08.2008</strong></td>
-<td class="centerTop"><strong>Berufsgenossenschaftliche Unfallklinik</strong></td>
+<td class="centerTop"><strong>BERUFSGENOSSENSCHAFTLICHE UNFALLKLINIK</strong></td>
 <td style="text-align:right">Murnau, Germany</td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Title:</strong></td>
-<td class="centerTop"><strong>Honorary Fellow</strong></td>
+<td style="text-align:left"><strong>HONORARY FELLOW</strong></td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Team:</strong></td>
@@ -190,21 +185,16 @@
 </table>
 <table>
 <thead>
-<tr>
-<th style="text-align:left"></th>
-<th style="text-align:center"></th>
-<th style="text-align:right"></th>
-</tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:left"><strong>09.2006 – 11.2007</strong></td>
-<td class="centerTop"><strong>Google</strong></td>
+<td class="centerTop"><strong>GOOGLE</strong></td>
 <td style="text-align:right">Mountain View, CA</td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Title:</strong></td>
-<td class="centerTop"><strong>Quality Assurance Associate</strong></td>
+<td style="text-align:left"><strong>QUALITY ASSURANCE ASSOCIATE</strong></td>
 </tr>
 <td class="leftTop"><strong>Team:</strong></td>
 <td><p class="justifyAlign">Quality Assurance – no direct supervisor </p></td>
@@ -224,22 +214,15 @@
 </tbody>
 </table>
 <table>
-<thead>
-<tr>
-<th style="text-align:left"></th>
-<th style="text-align:center"></th>
-<th style="text-align:right"></th>
-</tr>
-</thead>
 <tbody>
 <tr>
 <td style="text-align:left"><strong>09.2006 – 12.2006</strong></td>
-<td class="centerTop"><strong>University of Portland</strong></td>
+<td class="centerTop"><strong>UNIVERSITY OF PORTLAND</strong></td>
 <td style="text-align:right">Portland, Oregon</td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Title:</strong></td>
-<td class="centerTop"><strong>Professor Biomechanics</strong></td>
+<td style="text-align:left"><strong>PROFESSOR BIOMECHANICS</strong></td>
 </tr>
 <tr>
 <td class="leftTop"><strong>Team:</strong></td>
