fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <hr class="star-light">
         <h2 class="font-weight-light mb-0" style="font-size:1.25rem">Experienced software engineer with over 6 years of development experience with enterprise application software.<br/>
           My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
-          Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoor/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
+          Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
         </h2>
       </div>
     </header>
