--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
       });
 
       $(function(){
-        $("#workExperienceContent").load("WorkExperience/WorkExperience.html"); 
-      });
-
-      $(function(){
         $("#certificationsContent").load("Certifications/Certifications.html"); 
       });
 
@@ -58,11 +54,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Josef Doornink</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
+        <!-- <a class="navbar-brand" style="font-size: 1.5em" href="#page-top">Josef Doornink</a> -->
+        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#page-top">Josef Doornink</a>
+        <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.0em" href="#page-top">Portfolio</a>
+            </li>
+          </ul>
+        </div> -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
@@ -86,7 +86,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/Bridge-Small-Brighter.jpg" alt="">
         <h1 class="text-uppercase mb-0">Josef Doornink</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0" style="font-size:1.25rem">Experienced software engineer with over 6 years of development experience with enterprise application software.<br/>
+        <h2 class="font-weight-light mb-0" style="font-size:1.25rem">Enthusiastic DevOps engineer with over 6 years of development experience with enterprise application software.<br/>
           My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
           Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
         </h2>
@@ -110,16 +110,6 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-work-experience">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/Work_Experience.jpg" alt="Work Experience">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-resume">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -127,6 +117,16 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/Resume.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a href="https://github.com/JDoornink">
+              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/repositories.jpg" alt="GitHub Repo">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -240,7 +240,7 @@
       </div>
     </div>
 
-    <!-- Portfolio Work Experience-->
+    <!-- Portfolio Work Experience
     <div class="portfolio-modal mfp-hide" id="portfolio-work-experience">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -259,7 +259,33 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
+    <!-- Portfolio Resume -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-resume">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume3.pdf">
+          <i class="fa"></i>
+          PDF (Single Page) </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">Curriculum Vitae</h2>
+              <hr class="star-dark mb-5">
+              <p class="mb-5"></p>
+              <div id="resumeContent"></div>
+            </p>
+            <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume3.pdf">
+              <i class="fa"></i>
+              PDF (Single Page) </a>
+            <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
 
     <!-- Portfolio Resume -->
     <div class="portfolio-modal mfp-hide" id="portfolio-resume">
